--- a/web-server/bike-store/src/app/Administration/purchases-report/purchases-report.component.html
+++ b/web-server/bike-store/src/app/Administration/purchases-report/purchases-report.component.html
@@ -1,4 +1,4 @@
-<article class="card-body" style="min-height: 450px;">
+<article class="card-body" style="min-height: 475px;">
     <div class="row">
         <div class="col-lg-12">
             <form #form autocomplete="off">
@@ -42,14 +42,16 @@
                     <table class="table table-hover bike-table">
                         <thead>
                             <tr class="d-flex">
-                                <th class="col-6">Clientes</th>
-                                <th class="col-6">Monto promedio de compras</th>
+                                <th class="col-3">Clientes</th>
+                                <th class="col-3">Apellido</th>
+                                <th class="col-6">Promedio de compras</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr class="d-flex" *ngFor="let line of report">
-                                <td class="col-6">{{line.client}}</td>
-                                <td class="col-6">{{line.purchases}}</td>
+                                <td class="col-3">{{line.nombre}}</td>
+                                <td class="col-3">{{line.apellido}}</td>
+                                <td class="col-6">$ {{line.promedioCompras}}</td>
                             </tr>
                         </tbody>
                     </table>
