Cambio de titulo Santa cruz

--- a/SantaCruzBikesCA/web-server/bike-store/src/app/Miscellaneoues/navigation/navigation.component.html
+++ b/SantaCruzBikesCA/web-server/bike-store/src/app/Miscellaneoues/navigation/navigation.component.html
@@ -1,4 +1,4 @@
 <nav class="navbar navbar-expand-lg navbar-dark bike-nav">
-    <a class="navbar-brand">Baldwin Bikes</a>
+    <a class="navbar-brand">Santa Cruz Bikes</a>
 </nav>
 <div class="line"></div>
